# Spike3DWorkEnv

./: .favorites.json  .gitignore  .gitmodules  .project  README.md  Spike3DWorkEnv.code-workspace  Spike3DWorkEnv_CodeOnly.code-workspace  Spike3DWorkEnv_CodeOnly__ALT.code-workspace  Spike3DWorkEnv_TopLevel.code-workspace  TestPolyglotNotebook.dib  pycscope  pyproject.toml  stash_all_changes.cmd
.devcontainer/: devcontainer.json
SCRIPTS/: vscode-template-generation.ipynb  vulture_unused_code.ipynb
SCRIPTS/exports/: NeuroPy_requirements.txt  Spike3D__Wtd_requirements.txt  Spike3D_requirements.txt  pyPhoCoreHelpers_requirements.txt
tests/: __init__.py
