[tool.poetry]
name = "spike3dworkenv"
version = "0.1.0"
description = "Meta package containing all Spike3D repos"
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.10"
tox = "^4.6.4"
pip = "^23.2.1"
ipython = "^8.9.0"
ipykernel = "^6.21.2"
vulture = "^2.7"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.3.1"
cookiecutter = "^2.1.1"

[tool.poetry.group.remote.dependencies]
neuropy = {path = "./NeuroPy", develop=true}
pyphocorehelpers = {path = "./pyPhoCoreHelpers", develop=true}
pyphoplacecellanalysis = {path = "./pyPhoPlaceCellAnalysis", develop=true}
pylustrator = {path = "./pylustrator", develop=true}

[tool.vulture]
exclude = ["pyPhoPlaceCellAnalysis/src/pyphoplacecellanalysis/External/"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*"]
make_whitelist = true
min_confidence = 100
paths = ["pyPhoPlaceCellAnalysis/src/pyphoplacecellanalysis", "pyPhoCoreHelpers/src/pyphocorehelpers", "NeuroPy/neuropy"]
sort_by_size = true
verbose = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
